ADD_SUBDIRECTORY(AD_Elastic)
ADD_SUBDIRECTORY(AD_FlowChannelRe100)
ADD_SUBDIRECTORY(AD_CavityCrivenFlowRe100)
ADD_SUBDIRECTORY(AD_CavityCrivenFlowRe400)
ADD_SUBDIRECTORY(AD_BuoyancyDrivenFlowRa1e3)
ADD_SUBDIRECTORY(AD_BuoyancyDrivenFlowRa1e4)
ADD_SUBDIRECTORY(AD_Elastic_BodyLoads)
ADD_SUBDIRECTORY(AD_Elastic_MultiBlock)
ADD_SUBDIRECTORY(AD_Elastic_MultiBlock_BodyLoads)
ADD_SUBDIRECTORY(AD_CellForcing)
ADD_SUBDIRECTORY(AD_Homogenize)
ADD_SUBDIRECTORY(AD_Thermal)
ADD_SUBDIRECTORY(AD_Thermal_SourceTerm)
ADD_SUBDIRECTORY(AD_TransientTM)
ADD_SUBDIRECTORY(AD_HeatEquation)
ADD_SUBDIRECTORY(AD_Electroelastic)
ADD_SUBDIRECTORY(PE_Integration)
ADD_SUBDIRECTORY(AD_Thermoelastic)
ADD_SUBDIRECTORY(AD_StabElastic)
ADD_SUBDIRECTORY(AD_TransientDynamics)
ADD_SUBDIRECTORY(AD_TransientDynamicsDamped)
ADD_SUBDIRECTORY(AD_TransientICs)
ADD_SUBDIRECTORY(AD_TransientTDBCs)
ADD_SUBDIRECTORY(AD_Plasticity)
ADD_SUBDIRECTORY(AD_Thermoplasticity)
ADD_SUBDIRECTORY(AD_Thermoplasticity2)
